# greeneye_gz

./: .gitignore  EclipseMake
src/Common/: Common.h  EntityIf.h  GEMessages.h  MissionIF.h  PlatformIF.h  SimulatorIF.h  TopologyIF.h
src/Common/Debug/: makefile
src/Common/Release/: subdir.mk
src/Infra/: UDPChannel.cpp  UDPChannel.h
src/MyDocuments/: Ros tips  development.ods
src/fleet/: CMakeLists.txt  package.xml
src/fleet/launch/: GreenEyeDemo.launch  GreenEyeDemo1.launch  GreenEyeDemo2.launch  GreenEyeDemo50platforms.launch  GreenEyeDemo_IAI.launch  outdoor_fleet_flight.launch  spawn_iai_quadrotors.launch  spawn_multiple_quadrotors.launch
src/fleet/src/: FleetController.cpp  FleetController.h  FleetController_constants.h  GazeboServer.cpp  GazeboServer.h  GreenEye_GS.cpp  GreenEye_GS.h  IGroundStation.cpp  IGroundStation.h  fleet_node.cpp  gazebo_server_node.cpp
src/fleet_teleop/: CMakeLists.txt  package.xml
src/fleet_teleop/launch/: uav_teleop_node.launch
src/fleet_teleop/src/: fleet_ocu_node.cpp  fleet_teleop_node.cpp  uav_teleop_node.cpp
src/fleet_worlds/: CMakeLists.txt  package.xml
src/fleet_worlds/launch/: KfarYona.launch  KfarYona.world  learn.launch  learn.world  start.launch
src/ge_platform/: .cproject  .project  CMakeLists.txt  package.xml
src/ge_platform/launch/: create_platform.launch
src/ge_platform/src/: GreenEye_Platform.cpp  GreenEye_Platform.h  GreenEye_Platform_Constants.h  ge_platform_node.cpp
src/quadrotor_model/: CMakeLists.txt  package.xml
src/quadrotor_model/launch/: spawn_quadrotor.launch
